# rust-projects

./: .gitignore  README.md
aaron_os/: Cargo.toml
aaron_os/.cargo/: config.toml
fraction_calculator/: Cargo.toml  README.md
fraction_calculator/src/: equation.rs  fraction.rs  main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
mars_calc/: README.md
mars_calc/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs
mygit/: Cargo.toml
mygit/src/: lib.rs  main.rs
server/public/: index.html
server/src/: server.rs  website_handler.rs
server/src/http/: query_string.rs  request.rs  response.rs
