[package]
name = "mygit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
configparser = "3.0.0"
sha-1 = "0.10.0"
regex = "1.5.5"
flate2 = "1.0.23"